--- a/src/index.html
+++ b/src/index.html
@@ -1,93 +1,20 @@
 <!--#include virtual="../_include/header.html"-->
 
-<script>
-  window.onload = function () {
-    var element = document.querySelector('[data-title="Value"]');
-    if (element && element.getAttribute("data-title") === "Value") {
-      element.classList.add("value-title");
-    }
-    console.log(element);
-
-    const worksElement = document.querySelector(".p-work__wrap");
-    const targetElement = document.querySelector(".p-work__bg");
-
-    if (worksElement) {
-      const resizeObserver = new ResizeObserver((entries) => {
-        for (let entry of entries) {
-          const worksHeight = entry.target.offsetHeight;
-          console.log(worksHeight);
-          targetElement.style.height = worksHeight + 50 + "px";
-        }
-      });
-      resizeObserver.observe(worksElement);
-    }
-
-    const scheduleElement = document.getElementById("schedule-top");
-    const targetElement2 = document.querySelector(".p-schedule__bg");
-
-    if (scheduleElement) {
-      const resizeObserver = new ResizeObserver((entries) => {
-        for (let entry of entries) {
-          const scheduleHeight = entry.target.offsetHeight;
-          console.log(scheduleHeight);
-          targetElement2.style.height = scheduleHeight + "px";
-        }
-      });
-      resizeObserver.observe(scheduleElement);
-    }
-
-    const guidelinenElement = document.querySelector(".p-guidelines__wrap");
-    const targetElement3 = document.querySelector(".p-guidelines__bg");
-
-    if (guidelinenElement) {
-      const resizeObserver = new ResizeObserver((entries) => {
-        for (let entry of entries) {
-          const guidelineHeight = entry.target.offsetHeight;
-          console.log(guidelineHeight);
-          targetElement3.style.height = guidelineHeight + "px";
-        }
-      });
-
-      resizeObserver.observe(guidelinenElement);
-    }
-  };
-  const matchMedia = window.matchMedia("(min-width: 800px)");
-  const listener = (event) => {
-    if (matchMedia.matches) {
-      document.querySelector(".js-changeImg").src = "/assets/img/hero/mv.png";
-      document.querySelector(".js-processImg").src =
-        "/assets/img/process/process_01.png";
-      console.log("800px以上");
-    } else {
-      document.querySelector(".js-changeImg").src =
-        "/assets/img/hero/mv_sp.png";
-      document.querySelector(".js-processImg").src =
-        "/assets/img/process/process_01-sp.png";
-      console.log("800px未満");
-    }
-  };
-
-  matchMedia.addEventListener("change", listener);
-  listener(matchMedia);
-
-  // window.onload = function () {
-  //   const worksElement = document.querySelector(".p-work__wrap");
-
-  //   if (worksElement) {
-  //     const worksHeight = worksElement.offsetHeight;
-  //     console.log(worksHeight);
-  //   }else {
-  //     console.log("worksElementがありません");
-  //   }
-  // };
-</script>
-
 <main>
   <!-- hero -->
   <section class="p-hero l-hero" id="">
     <div class="p-hero__inner inner">
       <div class="p-hero__img-wrap">
-        <img class="js-changeImg" src="/assets/img/hero/mv.png" alt="" />
+        <img
+          class="js-changeImg pc-only"
+          src="/assets/img/hero/mv.png"
+          alt=""
+        />
+        <img
+          class="js-changeImg sp-only"
+          src="/assets/img/hero/mv_sp.png"
+          alt=""
+        />
       </div>
       <div class="p-hero__title-wrap">
         <h2 class="p-hero__title hiragino">
@@ -105,7 +32,7 @@
   <section class="p-vision l-vision" id="">
     <div class="p-vision__inner inner">
       <div class="p-vision__title-wrap">
-        <h2 class="p-vision__title main-title" data-title="Vision">
+        <h2 class="p-vision__title main-title vision-title" data-title="Vision">
           <span>私たちのビジョン</span>
         </h2>
         <!-- <p class="p-vision__sub-title sub-title">私たちのビジョン</p> -->
@@ -138,61 +65,137 @@
         <p class="p-anckerLink__sub-title sub-title">目次</p>
       </div>
       <div class="p-anckerLink__wrap">
-        <ul class="p-anckerLink__items">
+        <!-- pc -->
+        <ul class="p-anckerLink__items pc-only" id="page-link">
           <li class="p-anckerLink__item">
-            <a href="#vision" class="p-anckerLink__link"
+            <a href="#work" class="p-anckerLink__link"
               >私の会社で働く6つの理由</a
             >
           </li>
           <li class="p-anckerLink__item">
-            <a href="#service" class="p-anckerLink__link">代表挨拶</a>
+            <a href="#message" class="p-anckerLink__link">代表挨拶</a>
           </li>
           <li class="p-anckerLink__item">
-            <a href="#news" class="p-anckerLink__link">私たちのお仕事</a>
+            <a href="#about" class="p-anckerLink__link">私たちのお仕事</a>
           </li>
           <li class="p-anckerLink__item">
-            <a href="#contact" class="p-anckerLink__link"
+            <a href="#schedule" class="p-anckerLink__link"
               >先輩の1日と働きがい</a
             >
           </li>
           <li class="p-anckerLink__item">
-            <a href="#contact" class="p-anckerLink__link"
+            <a href="#profile" class="p-anckerLink__link"
               >私たちの会社で活躍できる人</a
             >
           </li>
           <li class="p-anckerLink__item">
-            <a href="#contact" class="p-anckerLink__link">キャリアアップ制度</a>
+            <a href="#career" class="p-anckerLink__link">キャリアアップ制度</a>
           </li>
           <li class="p-anckerLink__item">
-            <a href="#contact" class="p-anckerLink__link">研修制度</a>
+            <a href="#career02" class="p-anckerLink__link">研修制度</a>
           </li>
           <li class="p-anckerLink__item">
-            <a href="#contact" class="p-anckerLink__link">福利厚生制度</a>
+            <a href="#career03" class="p-anckerLink__link">福利厚生制度</a>
           </li>
           <li class="p-anckerLink__item">
-            <a href="#contact" class="p-anckerLink__link"
+            <a href="#data" class="p-anckerLink__link"
               >データで見るいこいの里</a
             >
           </li>
           <li class="p-anckerLink__item">
-            <a href="#contact" class="p-anckerLink__link"
+            <a href="#reMessage" class="p-anckerLink__link"
               >採用担当者からのメッセージ</a
             >
           </li>
           <li class="p-anckerLink__item">
-            <a href="#contact" class="p-anckerLink__link">募集要項</a>
+            <a href="#guidelines" class="p-anckerLink__link">募集要項</a>
           </li>
           <li class="p-anckerLink__item">
-            <a href="#contact" class="p-anckerLink__link">選考プロセス</a>
+            <a href="#process" class="p-anckerLink__link">選考プロセス</a>
           </li>
           <li class="p-anckerLink__item">
-            <a href="#contact" class="p-anckerLink__link">エントリー</a>
+            <a href="#contactBtn" class="p-anckerLink__link">エントリー</a>
           </li>
           <li class="p-anckerLink__item">
-            <a href="#contact" class="p-anckerLink__link">よくある質問</a>
+            <a href="#faq" class="p-anckerLink__link">よくある質問</a>
           </li>
           <li class="p-anckerLink__item">
-            <a href="#contact" class="p-anckerLink__link"
+            <a href="#company" class="p-anckerLink__link"
+              >ウキシログループ概要</a
+            >
+          </li>
+        </ul>
+
+        <!-- sp -->
+        <ul class="p-anckerLink__items sp-only">
+          <li class="p-anckerLink__item">
+            <a href="#work" class="p-anckerLink__link"
+              >私の会社で働く6つの理由</a
+            >
+          </li>
+          <ul class="p-anckerLink__items-sp">
+            <li class="p-anckerLink__item">
+              <a href="#message" class="p-anckerLink__link">代表挨拶</a>
+            </li>
+            <li class="p-anckerLink__item">
+              <a href="#about" class="p-anckerLink__link">私たちのお仕事</a>
+            </li>
+          </ul>
+          <ul>
+            <li class="p-anckerLink__item">
+              <a href="#schedule" class="p-anckerLink__link"
+                >先輩の1日と働きがい</a
+              >
+            </li>
+          </ul>
+          <li class="p-anckerLink__item">
+            <a href="#profile" class="p-anckerLink__link"
+              >私たちの会社で活躍できる人</a
+            >
+          </li>
+          <ul class="p-anckerLink__items-sp">
+            <li class="p-anckerLink__item">
+              <a href="#career" class="p-anckerLink__link"
+                >キャリアアップ制度</a
+              >
+            </li>
+            <li class="p-anckerLink__item">
+              <a href="#career02" class="p-anckerLink__link">研修制度</a>
+            </li>
+          </ul>
+          <ul class="p-anckerLink__items-sp">
+            <li class="p-anckerLink__item">
+              <a href="#career03" class="p-anckerLink__link">福利厚生制度</a>
+            </li>
+            <li class="p-anckerLink__item">
+              <a href="#data" class="p-anckerLink__link"
+                >データで見るいこいの里</a
+              >
+            </li>
+          </ul>
+          <li class="p-anckerLink__item">
+            <a href="#reMessage" class="p-anckerLink__link"
+              >採用担当者からのメッセージ</a
+            >
+          </li>
+          <ul class="p-anckerLink__items-sp">
+            <li class="p-anckerLink__item">
+              <a href="#guidelines" class="p-anckerLink__link">募集要項</a>
+            </li>
+            <li class="p-anckerLink__item">
+              <a href="#process" class="p-anckerLink__link">選考プロセス</a>
+            </li>
+          </ul>
+          <ul class="p-anckerLink__items-sp">
+            <li class="p-anckerLink__item">
+              <a href="#contactBtn" class="p-anckerLink__link">エントリー</a>
+            </li>
+            <li class="p-anckerLink__item">
+              <a href="#faq" class="p-anckerLink__link">よくある質問</a>
+            </li>
+          </ul>
+          <li class="p-anckerLink__item">
+            <a href="#company" class="p-anckerLink__link"
               >ウキシログループ概要</a
             >
           </li>
@@ -202,12 +205,12 @@
   </section>
 
   <!-- work -->
-  <section class="p-work l-work" id="">
+  <section class="p-work l-work anchor" id="work">
     <div class="p-work__bg"></div>
     <div class="p-work__inner inner">
       <div class="p-work__title-wrap">
-        <h2 class="p-work__title main-title" data-title="Reasons to work">
-          <span>私の会社で働く<br class="sp-only">6つの理由</span>
+        <h2 class="p-work__title main-title work-title" data-title="Reasons to work">
+          <span>私の会社で働く<br class="sp-only" />6つの理由</span>
         </h2>
       </div>
       <div class="p-work__first-info">
@@ -219,7 +222,6 @@
       </div>
 
       <div class="p-work__wrap">
-        <!-- <div class="p-work__bg-sp"></div> -->
         <!-- 1 -->
         <div class="p-work__item">
           <div class="p-work__img pc-only">
@@ -399,10 +401,10 @@
   </section>
 
   <!-- message -->
-  <section class="p-message l-message" id="">
+  <section class="p-message l-message" id="message">
     <div class="p-message__inner inner">
       <div class="p-message__title-wrap">
-        <h2 class="p-message__title main-title" data-title="Message">
+        <h2 class="p-message__title main-title message-title" data-title="Message">
           <span>代表挨拶</span>
         </h2>
       </div>
@@ -441,7 +443,7 @@
           <p class="p-message__bottom-text">
             3点を今後とも追求し、より魅力的な施設、職場を実現して参ります。
           </p>
-          <p class="end-text sp-only">
+          <p class="end-text-sp">
             株式会社 ウキシロケアセンター<br />
             株式会社 いこいの里 佐賀<br />
             株式会社 ウキシロホールディングス<br />
@@ -460,10 +462,10 @@
   </section>
 
   <!-- about -->
-  <section class="p-about l-about" id="">
+  <section class="p-about l-about" id="about">
     <div class="p-about__inner inner">
       <div class="p-about__title-wrap">
-        <h2 class="p-about__title main-title" data-title="About work">
+        <h2 class="p-about__title main-title about-title" data-title="About work">
           <span>私たちのお仕事</span>
         </h2>
       </div>
@@ -483,11 +485,11 @@
   </section>
 
   <!-- schedule -->
-  <section class="p-schedule l-schedule" id="">
+  <section class="p-schedule l-schedule" id="schedule">
     <div class="p-schedule__bg"></div>
     <div class="p-schedule__inner inner">
       <div class="p-schedule__title-wrap">
-        <h2 class="p-schedule__title main-title" data-title="Schedule">
+        <h2 class="p-schedule__title main-title schedule-title" data-title="Schedule">
           <span>先輩の1日と働きがい</span>
         </h2>
       </div>
@@ -556,8 +558,7 @@
             </span>
           </h3>
           <p>
-            先輩のコメントが入ります。先輩のコメントが入ります。先輩のコメントが入ります。先輩のコメントが入ります。先輩のコメントが入ります。先輩のコメントが入ります。先輩のコメントが入ります。先輩のコメントが入ります。先輩のコメントが入ります。先輩のコメントが入ります。
-            先輩のコメントが入ります。先輩のコメントが入ります。先輩のコメントが入ります。先輩のコメントが入ります。先輩のコメントが入ります。先輩のコメントが入ります。先輩のコメントが入ります。
+            先輩のコメントが入ります。先輩のコメントが入ります。先輩のコメントが入ります。先輩のコメントが入ります。先輩のコメントが入ります。先輩のコメントが入ります。先輩のコメントが入ります。先輩のコメントが入ります。先輩のコメントが入ります。先輩のコメントが入ります。先輩のコメントが入ります。先輩のコメントが入ります。先輩のコメントが入ります。先輩のコメントが入ります。先輩のコメントが入ります。先輩のコメントが入ります。先輩のコメントが入ります。
           </p>
         </div>
       </div>
@@ -565,14 +566,14 @@
   </section>
 
   <!-- profile -->
-  <section class="p-profile l-profile" id="">
+  <section class="p-profile l-profile" id="profile">
     <div class="p-profile__inner inner">
       <div class="p-profile__title-wrap">
         <h2
-          class="p-profile__title main-title"
+          class="p-profile__title main-title profile-title"
           data-title="Ideal candidate profile"
         >
-          <span>私たちの会社で<br class="sp-only">活躍できる人</span>
+          <span>私たちの会社で<br class="sp-only" />活躍できる人</span>
         </h2>
       </div>
       <div class="p-profile__wrap">
@@ -620,11 +621,13 @@
   </section>
 
   <!-- value -->
-  <section class="p-value l-value" id="">
+  <section class="p-value l-value" id="value">
     <div class="p-value__inner inner">
       <div class="p-value__title-wrap">
         <h2 class="p-value__title main-title" data-title="Value">
-          <span>いこいの里<br class="sp-onluy"> 5つのバリュー</span>
+          <span
+            >いこいの里 5つのバリュー</span
+          >
         </h2>
       </div>
       <div class="p-value__wrap">
@@ -737,10 +740,10 @@
   </section>
 
   <!-- career -->
-  <section class="p-career l-career" id="">
+  <section class="p-career l-career" id="career">
     <div class="p-career__inner inner">
       <div class="p-career__title-wrap">
-        <h2 class="p-career__title main-title" data-title="Career enhancement">
+        <h2 class="p-career__title main-title career-title" data-title="Career enhancement">
           <span> キャリアアップ制度 </span>
         </h2>
       </div>
@@ -768,7 +771,7 @@
         <span class="listMark-grid">※夜勤4回、諸手当含む</span>
       </div>
       <div class="p-career__wrap bottom">
-        <div class="p-career__box">
+        <div class="p-career__box" id="career02">
           <h3 class="p-career__box-title hiragino">
             <span>研修制度</span>
           </h3>
@@ -779,7 +782,7 @@
           </p>
         </div>
 
-        <div class="p-career__box">
+        <div class="p-career__box" id="career03">
           <h3 class="p-career__box-title hiragino">
             <span> 福利厚生制度 </span>
           </h3>
@@ -792,10 +795,10 @@
   </section>
 
   <!-- data -->
-  <section class="p-data l-data" id="">
+  <section class="p-data l-data" id="data">
     <div class="p-data__inner inner">
       <div class="p-data__title-wrap">
-        <h2 class="p-data__title main-title" data-title="Data">
+        <h2 class="p-data__title main-title data-title" data-title="Data">
           <span>データで見るいこいの里</span>
         </h2>
       </div>
@@ -827,19 +830,21 @@
           </li>
         </ul>
 
-        <h3 class="p-data-item__title hiragino">採用担当者からのメッセージ</h3>
+        <h3 class="p-data-item__title hiragino" id="reMessage">
+          採用担当者からのメッセージ
+        </h3>
         <p class="p-data-item__text"></p>
       </div>
     </div>
   </section>
 
   <!-- guidelines -->
-  <section class="p-guidelines l-guidelines" id="">
+  <section class="p-guidelines l-guidelines" id="guidelines">
     <div class="p-guidelines__bg"></div>
     <div class="p-guidelines__inner inner">
       <div class="p-guidelines__title-wrap">
         <h2
-          class="p-guidelines__title main-title"
+          class="p-guidelines__title main-title guidelines-title"
           data-title="Application Guidelines"
         >
           <span>募集要項</span>
@@ -923,17 +928,22 @@
   </section>
 
   <!-- process -->
-  <section class="p-process l-process" id="">
+  <section class="p-process l-process" id="process">
     <div class="p-process__inner inner">
       <div class="p-process__title-wrap">
-        <h2 class="p-process__title main-title" data-title="Process">
+        <h2 class="p-process__title main-title process-title" data-title="Process">
           <span>選考プロセス</span>
         </h2>
       </div>
       <div class="p-process__wrap">
         <img
-          class="js-processImg"
+          class="js-processImg pc-only"
           src="/assets/img/process/process_01.png"
+          alt="選考プロセス"
+        />
+        <img
+          class="js-processImg sp-only"
+          src="/assets/img/process/process_01-sp.png"
           alt="選考プロセス"
         />
       </div>
@@ -941,17 +951,17 @@
   </section>
 
   <!-- contactBtn -->
-  <section class="c-contactBtn l-contactBtn" id="">
+  <section class="c-contactBtn l-contactBtn" id="contactBtn">
     <a href="#" class="c-contactBtn--black">
       <span>エントリーはこちら</span>
     </a>
   </section>
 
   <!-- faq -->
-  <section class="p-faq l-faq" id="">
+  <section class="p-faq l-faq" id="faq">
     <div class="p-faq__inner inner">
       <div class="p-faq__title-wrap">
-        <h2 class="p-faq__title main-title" data-title="O&A">
+        <h2 class="p-faq__title main-title faq-title" data-title="O&A">
           <span>よくある質問</span>
         </h2>
       </div>
@@ -1034,7 +1044,7 @@
   </section>
 
   <!-- company -->
-  <section class="p-company l-company" id="">
+  <section class="p-company l-company" id="company">
     <div class="p-company__inner inner">
       <div class="p-company__title-wrap">
         <h3 class="p-company__title main-title">
