--- a/src/index.html
+++ b/src/index.html
@@ -64,9 +64,9 @@
       <div class="p-anckerLink__title-wrap">
         <p class="p-anckerLink__sub-title sub-title">目次</p>
       </div>
-      <div class="p-anckerLink__wrap">
+      <div class="p-anckerLink__wrap" id="page-link">
         <!-- pc -->
-        <ul class="p-anckerLink__items pc-only" id="page-link">
+        <ul class="p-anckerLink__items pc-only">
           <li class="p-anckerLink__item">
             <a href="#work" class="p-anckerLink__link"
               >私の会社で働く6つの理由</a
