sp時のアコーディオンを左寄せに調整

--- a/src/index.html
+++ b/src/index.html
@@ -134,27 +134,27 @@
                 >私の会社で働く6つの理由</a
               >
             </li>
-            <ul class="p-anckerLink__items-sp">
+            <!-- <ul class="p-anckerLink__items-sp"> -->
               <li class="p-anckerLink__item">
                 <a href="#message" class="p-anckerLink__link">代表挨拶</a>
               </li>
               <li class="p-anckerLink__item">
                 <a href="#about" class="p-anckerLink__link">私たちのお仕事</a>
               </li>
-            </ul>
-            <ul>
+            <!-- </ul> -->
+            <!-- <ul> -->
               <li class="p-anckerLink__item">
                 <a href="#schedule" class="p-anckerLink__link"
                   >先輩の1日と働きがい</a
                 >
               </li>
-            </ul>
+            <!-- </ul> -->
             <li class="p-anckerLink__item">
               <a href="#profile" class="p-anckerLink__link"
                 >私たちの会社で活躍できる人</a
               >
             </li>
-            <ul class="p-anckerLink__items-sp">
+            <!-- <ul class="p-anckerLink__items-sp"> -->
               <li class="p-anckerLink__item">
                 <a href="#career" class="p-anckerLink__link"
                   >キャリアアップ制度</a
@@ -163,8 +163,8 @@
               <li class="p-anckerLink__item">
                 <a href="#career02" class="p-anckerLink__link">研修制度</a>
               </li>
-            </ul>
-            <ul class="p-anckerLink__items-sp">
+            <!-- </ul> -->
+            <!-- <ul class="p-anckerLink__items-sp"> -->
               <li class="p-anckerLink__item">
                 <a href="#career03" class="p-anckerLink__link">福利厚生制度</a>
               </li>
@@ -173,28 +173,28 @@
                   >データで見るいこいの里</a
                 >
               </li>
-            </ul>
+            <!-- </ul> -->
             <li class="p-anckerLink__item">
               <a href="#reMessage" class="p-anckerLink__link"
                 >採用担当者からのメッセージ</a
               >
             </li>
-            <ul class="p-anckerLink__items-sp">
+            <!-- <ul class="p-anckerLink__items-sp"> -->
               <li class="p-anckerLink__item">
                 <a href="#guidelines" class="p-anckerLink__link">募集要項</a>
               </li>
               <li class="p-anckerLink__item">
                 <a href="#process" class="p-anckerLink__link">選考プロセス</a>
               </li>
-            </ul>
-            <ul class="p-anckerLink__items-sp">
+            <!-- </ul> -->
+            <!-- <ul class="p-anckerLink__items-sp"> -->
               <li class="p-anckerLink__item">
                 <a href="#contactBtn" class="p-anckerLink__link">エントリー</a>
               </li>
               <li class="p-anckerLink__item">
                 <a href="#faq" class="p-anckerLink__link">よくある質問</a>
               </li>
-            </ul>
+            <!-- </ul> -->
             <li class="p-anckerLink__item">
               <a href="#company" class="p-anckerLink__link"
                 >ウキシログループ概要</a
