sp時のアコーディオン jsの調整

--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
   <!-- anckerLink -->
   <section class="p-anckerLink l-anckerLink delay" id="">
     <div class="p-anckerLink__inner inner">
-      <div class="p-anckerLink__title-wrap">
+      <div class="p-anckerLink__title-wrap" id="js-anckerLink">
         <p class="p-anckerLink__sub-title sub-title">目次</p>
       </div>
       <div class="p-anckerLink__wrap" id="page-link">
@@ -127,7 +127,7 @@
         </ul>
 
         <!-- sp -->
-        <div class="sp-only">
+        <div class="sp-only" style="display: none;">
           <ul class="p-anckerLink__items">
             <li class="p-anckerLink__item">
               <a href="#work" class="p-anckerLink__link"
