スタッフ一覧レイアウト修正

--- a/src/index.html
+++ b/src/index.html
@@ -127,7 +127,7 @@
         </ul>
 
         <!-- sp -->
-        <div class="sp-only" style="display: none;">
+        <div class="sp-only" style="display: none">
           <ul class="p-anckerLink__items">
             <li class="p-anckerLink__item">
               <a href="#work" class="p-anckerLink__link"
@@ -135,19 +135,19 @@
               >
             </li>
             <!-- <ul class="p-anckerLink__items-sp"> -->
-              <li class="p-anckerLink__item">
-                <a href="#message" class="p-anckerLink__link">代表挨拶</a>
-              </li>
-              <li class="p-anckerLink__item">
-                <a href="#about" class="p-anckerLink__link">私たちのお仕事</a>
-              </li>
+            <li class="p-anckerLink__item">
+              <a href="#message" class="p-anckerLink__link">代表挨拶</a>
+            </li>
+            <li class="p-anckerLink__item">
+              <a href="#about" class="p-anckerLink__link">私たちのお仕事</a>
+            </li>
             <!-- </ul> -->
             <!-- <ul> -->
-              <li class="p-anckerLink__item">
-                <a href="#schedule" class="p-anckerLink__link"
-                  >先輩の1日と働きがい</a
-                >
-              </li>
+            <li class="p-anckerLink__item">
+              <a href="#schedule" class="p-anckerLink__link"
+                >先輩の1日と働きがい</a
+              >
+            </li>
             <!-- </ul> -->
             <li class="p-anckerLink__item">
               <a href="#profile" class="p-anckerLink__link"
@@ -155,24 +155,24 @@
               >
             </li>
             <!-- <ul class="p-anckerLink__items-sp"> -->
-              <li class="p-anckerLink__item">
-                <a href="#career" class="p-anckerLink__link"
-                  >キャリアアップ制度</a
-                >
-              </li>
-              <li class="p-anckerLink__item">
-                <a href="#career02" class="p-anckerLink__link">研修制度</a>
-              </li>
+            <li class="p-anckerLink__item">
+              <a href="#career" class="p-anckerLink__link"
+                >キャリアアップ制度</a
+              >
+            </li>
+            <li class="p-anckerLink__item">
+              <a href="#career02" class="p-anckerLink__link">研修制度</a>
+            </li>
             <!-- </ul> -->
             <!-- <ul class="p-anckerLink__items-sp"> -->
-              <li class="p-anckerLink__item">
-                <a href="#career03" class="p-anckerLink__link">福利厚生制度</a>
-              </li>
-              <li class="p-anckerLink__item">
-                <a href="#data" class="p-anckerLink__link"
-                  >データで見るいこいの里</a
-                >
-              </li>
+            <li class="p-anckerLink__item">
+              <a href="#career03" class="p-anckerLink__link">福利厚生制度</a>
+            </li>
+            <li class="p-anckerLink__item">
+              <a href="#data" class="p-anckerLink__link"
+                >データで見るいこいの里</a
+              >
+            </li>
             <!-- </ul> -->
             <li class="p-anckerLink__item">
               <a href="#reMessage" class="p-anckerLink__link"
@@ -180,20 +180,20 @@
               >
             </li>
             <!-- <ul class="p-anckerLink__items-sp"> -->
-              <li class="p-anckerLink__item">
-                <a href="#guidelines" class="p-anckerLink__link">募集要項</a>
-              </li>
-              <li class="p-anckerLink__item">
-                <a href="#process" class="p-anckerLink__link">選考プロセス</a>
-              </li>
+            <li class="p-anckerLink__item">
+              <a href="#guidelines" class="p-anckerLink__link">募集要項</a>
+            </li>
+            <li class="p-anckerLink__item">
+              <a href="#process" class="p-anckerLink__link">選考プロセス</a>
+            </li>
             <!-- </ul> -->
             <!-- <ul class="p-anckerLink__items-sp"> -->
-              <li class="p-anckerLink__item">
-                <a href="#contactBtn" class="p-anckerLink__link">エントリー</a>
-              </li>
-              <li class="p-anckerLink__item">
-                <a href="#faq" class="p-anckerLink__link">よくある質問</a>
-              </li>
+            <li class="p-anckerLink__item">
+              <a href="#contactBtn" class="p-anckerLink__link">エントリー</a>
+            </li>
+            <li class="p-anckerLink__item">
+              <a href="#faq" class="p-anckerLink__link">よくある質問</a>
+            </li>
             <!-- </ul> -->
             <li class="p-anckerLink__item">
               <a href="#company" class="p-anckerLink__link"
@@ -495,7 +495,7 @@
         <div class="p-schedule__bg"></div>
         <div class="p-schedule-prof__box">
           <h3 class="p-schedule-prof__title hiragino sp-only">
-            いこいの里 <br>徳吉で働く菊田さん
+            いこいの里 <br />徳吉で働く菊田さん
           </h3>
           <div class="p-schedule-prof__img delay">
             <img
@@ -510,7 +510,11 @@
             <p>
               <strong>勤続年数</strong><span>13年4ヶ月 </span><br />
               <strong>好きなこと</strong
-              ><span>ダーツ、子供(片思い)、<br class="sp-only">うどん、ラーメン</span>
+              ><span
+                >ダーツ、子供(片思い)、<br
+                  class="sp-only"
+                />うどん、ラーメン</span
+              >
             </p>
           </div>
         </div>
@@ -634,29 +638,45 @@
       <div class="p-schedule-prof__wrap">
         <div class="p-schedule__bg"></div>
         <div class="p-schedule-prof__box">
-          <h3 class="p-schedule-prof__title hiragino sp-only">いこいの里 <br>本城弐番館の坂口さん</h3>
+          <h3 class="p-schedule-prof__title hiragino sp-only">
+            いこいの里 <br />本城弐番館の坂口さん
+          </h3>
           <div class="p-schedule-prof__img delay">
-            <img src="/assets/img/schedule/schedule_prof02.png" alt="先輩の1日と働きがい" />
+            <img
+              src="/assets/img/schedule/schedule_prof02.png"
+              alt="先輩の1日と働きがい"
+            />
           </div>
           <div class="p-schedule-prof__text">
-            <h3 class="p-schedule-prof__title hiragino pc-only">いこいの里 本城弐番館の坂口さん</h3>
+            <h3 class="p-schedule-prof__title hiragino pc-only">
+              いこいの里 本城弐番館の坂口さん
+            </h3>
             <p>
               <strong>勤続年数</strong><span>6年 </span><br />
-              <strong>好きなこと</strong><span>アニメ鑑賞・飲酒・<br class="sp-only">カラオケ・音楽鑑賞・読書</span>
+              <strong>好きなこと</strong
+              ><span
+                >アニメ鑑賞・飲酒・<br
+                  class="sp-only"
+                />カラオケ・音楽鑑賞・読書</span
+              >
             </p>
           </div>
         </div>
 
-        <div class="p-schedule-prof__accordion" style="display: none;">
+        <div class="p-schedule-prof__accordion" style="display: none">
           <div class="p-schedule-prof-message__box">
             <div class="p-schedule-prof-message__text">
-              <h3 class="p-schedule-prof-message__title hiragino">この会社で働きやりがい</h3>
+              <h3 class="p-schedule-prof-message__title hiragino">
+                この会社で働きやりがい
+              </h3>
               <p>
                 職員が年齢、経験問わず役職につけるため頑張っいてたら頑張った分返ってきやすい環境で面白いです！
               </p>
             </div>
             <div class="p-schedule-prof-message__text">
-              <h3 class="p-schedule-prof-message__title hiragino">当社の入社試験を受ける方へのメッセージ</h3>
+              <h3 class="p-schedule-prof-message__title hiragino">
+                当社の入社試験を受ける方へのメッセージ
+              </h3>
               <p>
                 このページを見て頂きありがとうございます。多くの人生の先輩方と接するお仕事は仕事以外の事も学ぶ楽しさがたくさんあります。これからの時代さらに重視される介護施設で一緒に働きましょう。<br />
                 お会いできる日をとても楽しみにお待ちしております。
@@ -671,7 +691,9 @@
               <dl class="p-schedule__item delay">
                 <dt class="p-schedule__item-time hiragino">9:00</dt>
                 <dd>
-                  <h3 class="p-schedule__item-title hiragino">業務分担、トイレ介助、バイタル測定</h3>
+                  <h3 class="p-schedule__item-title hiragino">
+                    業務分担、トイレ介助、バイタル測定
+                  </h3>
                 </dd>
               </dl>
               <dl class="p-schedule__item delay">
@@ -697,19 +719,25 @@
               <dl class="p-schedule__item delay">
                 <dt class="p-schedule__item-time hiragino">13:00</dt>
                 <dd>
-                  <h3 class="p-schedule__item-title hiragino">好きなアニメを見ながらお弁当タイム!!</h3>
+                  <h3 class="p-schedule__item-title hiragino">
+                    好きなアニメを見ながらお弁当タイム!!
+                  </h3>
                 </dd>
               </dl>
               <dl class="p-schedule__item delay">
                 <dt class="p-schedule__item-time hiragino">14:00</dt>
                 <dd>
-                  <h3 class="p-schedule__item-title hiragino">レクリエーション、体操、リハビリ</h3>
+                  <h3 class="p-schedule__item-title hiragino">
+                    レクリエーション、体操、リハビリ
+                  </h3>
                 </dd>
               </dl>
               <dl class="p-schedule__item delay">
                 <dt class="p-schedule__item-time hiragino">15:00</dt>
                 <dd>
-                  <h3 class="p-schedule__item-title hiragino">おやつ配り、排泄介助</h3>
+                  <h3 class="p-schedule__item-title hiragino">
+                    おやつ配り、排泄介助
+                  </h3>
                 </dd>
               </dl>
               <dl class="p-schedule__item delay">
@@ -729,13 +757,18 @@
               <dl class="p-schedule__item delay">
                 <dt class="p-schedule__item-time hiragino">18:00</dt>
                 <dd>
-                  <h3 class="p-schedule__item-title hiragino">業務終了、退勤</h3>
+                  <h3 class="p-schedule__item-title hiragino">
+                    業務終了、退勤
+                  </h3>
                 </dd>
               </dl>
             </div>
             <div class="p-schedule__images pc-only delay">
               <div class="p-schedule__image">
-                <img src="/assets/img/schedule/schedule_01.png" alt="始業、朝礼、掃除" />
+                <img
+                  src="/assets/img/schedule/schedule_01.png"
+                  alt="始業、朝礼、掃除"
+                />
               </div>
               <div class="p-schedule__image">
                 <img src="/assets/img/schedule/schedule_02.png" alt="昼休み" />
@@ -755,8 +788,6 @@
     </div>
   </section>
 
-
-
   <!-- 3 -->
   <section class="p-schedule l-schedule delay bottom">
     <div class="p-schedule__inner inner">
@@ -765,10 +796,13 @@
         <div class="p-schedule__bg"></div>
         <div class="p-schedule-prof__box">
           <h3 class="p-schedule-prof__title hiragino sp-only">
-            いこいの里 <br>伊万里の大古場さん
+            いこいの里 <br />伊万里の大古場さん
           </h3>
           <div class="p-schedule-prof__img delay">
-            <img src="/assets/img/schedule/schedule_prof03.png" alt="先輩の1日と働きがい" />
+            <img
+              src="/assets/img/schedule/schedule_prof03.png"
+              alt="先輩の1日と働きがい"
+            />
           </div>
           <div class="p-schedule-prof__text">
             <h3 class="p-schedule-prof__title hiragino pc-only">
@@ -781,7 +815,7 @@
           </div>
         </div>
 
-        <div class="p-schedule-prof__accordion" style="display: none;">
+        <div class="p-schedule-prof__accordion" style="display: none">
           <div class="p-schedule-prof-message__box">
             <div class="p-schedule-prof-message__text">
               <h3 class="p-schedule-prof-message__title hiragino">
@@ -862,7 +896,10 @@
             </div>
             <div class="p-schedule__images pc-only delay">
               <div class="p-schedule__image">
-                <img src="/assets/img/schedule/schedule_01.png" alt="始業、朝礼、掃除" />
+                <img
+                  src="/assets/img/schedule/schedule_01.png"
+                  alt="始業、朝礼、掃除"
+                />
               </div>
               <div class="p-schedule__image">
                 <img src="/assets/img/schedule/schedule_02.png" alt="昼休み" />
@@ -878,9 +915,6 @@
       </div>
     </div>
   </section>
-
-
-
 
   <!-- profile -->
   <section class="p-profile l-profile delay" id="profile">
@@ -1121,7 +1155,10 @@
         </h2>
       </div>
       <div class="p-data__wrap">
-        <ul class="p-data__items">
+        <div class="p-data-img sp-only">
+          <img src="/assets/img/data/data_sp.png" alt="">
+        </div>
+        <ul class="p-data__items pc-only">
           <li class="p-data__item delay">
             <img
               src="/assets/img/data/data_01.png"
@@ -1148,10 +1185,10 @@
           </li>
         </ul>
 
-        <h3 class="p-data-item__title hiragino delay" id="reMessage">
+        <!-- <h3 class="p-data-item__title hiragino delay" id="reMessage">
           採用担当者からのメッセージ
         </h3>
-        <p class="p-data-item__text"></p>
+        <p class="p-data-item__text"></p> -->
       </div>
     </div>
   </section>
@@ -1248,8 +1285,13 @@
         <dl class="p-guidelines__list delay">
           <dt class="p-guidelines__term">福利厚生</dt>
           <dd class="p-guidelines__description">
-            各社会保険、制服貸与、社宅有、退職金制度(規定有)、<br />
-            確定拠出年金、入居者家族割引、社内奨学金制度等
+            各社会保険<br />
+            制服貸与<br />
+            社宅有<br />
+            退職金制度(規定有)<br />
+            確定拠出年金<br />
+            入居者家族割引<br />
+            社内奨学金制度等
           </dd>
         </dl>
       </div>
@@ -1275,7 +1317,7 @@
         />
         <img
           class="js-processImg sp-only"
-          src="/assets/img/process/process_01-sp.png"
+          src="/assets/img/process/process_01-sp01.png"
           alt="選考プロセス"
         />
       </div>
@@ -1379,7 +1421,10 @@
   <section class="p-company l-company delay" id="company">
     <div class="p-company__inner inner">
       <div class="p-company__title-wrap delay">
-        <h2 class="p-company__title main-title company-title" data-title="Company">
+        <h2
+          class="p-company__title main-title company-title"
+          data-title="Company"
+        >
           <span>会社概要</span>
         </h2>
       </div>
@@ -1395,7 +1440,11 @@
           </dl>
           <dl>
             <dt>電話番号</dt>
-            <dd><a href="tel:093-871-5800"><span class="tel">093-871-5800</span></a></dd>
+            <dd>
+              <a href="tel:093-871-5800"
+                ><span class="tel">093-871-5800</span></a
+              >
+            </dd>
           </dl>
           <dl>
             <dt>FAX</dt>
