文言の追加、行間修正

--- a/src/index.html
+++ b/src/index.html
@@ -1539,9 +1539,12 @@
             <span>研修制度</span>
           </h3>
           <p class="p-career__box-text">
-            研修制度を設け各職種とも業務に応じて入社から1～3ヶ月間の新入社員研修を入念に行なっています。
+            <span>私たちは、社員の成長支援を「お客様の笑顔に向けた重要な経営課題」であると考えています。もし、これが学びたい！という要望があれば、是非先輩に相談してください。</span>
             <br />
-            資格取得支援制度、各種専門スキル研修、マネジメント研修、OJT（先輩による実務指導）
+            <strong>
+              研修制度を設け各職種とも業務に応じて入社から1～3ヶ月間の新入社員研修を入念に行なっています。<br>
+              資格取得支援制度、各種専門スキル研修、マネジメント研修、O J T（先輩による実務指導）
+            </strong>
           </p>
         </div>
 
@@ -1550,7 +1553,11 @@
             <span> 福利厚生制度 </span>
           </h3>
           <p class="p-career__box-text">
-            各社会保険、年次有給休暇、通勤手当、制服貸与、社宅、退職金制度（規定有）、確定拠出年金、入居者家族割引、社内奨学金制度、マイカー通勤支援
+            <span>社員に安全な環境で安心して働き、日々リフレッシュした気持ちで出勤してほしい。そうすることで笑顔でお客様に接していただきたい。そんな想いを持って憩いの里では様々な福利厚生制度を導入しています。</span>
+            <br>
+            <strong>
+              各社会保険、年次有給休暇、通勤手当、制服貸与、社宅、退職金制度（規定有）、確定拠出年金、入居者家族割引、社内奨学金制度、マイカー通勤支援
+            </strong>
           </p>
         </div>
       </div>
